--- a/views/login.html
+++ b/views/login.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form-group">
                       <div class="row">
-                        <div class="col-md-5 col-md-push-1">
+                        <div class="col-md-5 col-md-push-1 col-sm-5 col-xs-6">
                           <div class="checkbox checkbox-adv">
                             <label for="doc_login_remember">
                               <input class="access-hide" id="doc_login_remember" name="doc_login_remember" type="checkbox">Stay signed in
@@ -54,7 +54,7 @@
                             </label>
                           </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-7 col-xs-6">
                             <p class="margin-no pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
                         </div>
                       </div>
