--- a/views/practice.html
+++ b/views/practice.html
@@ -1,10 +1,12 @@
 <div class="content-heading">
-	<h1 class="heading">Practice</h1>
+  <div class="col-sm-10 col-sm-offset-1">
+   <h3 class="heading">Practice</h3>
+  </div>
 </div>
 
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
-<div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
+<div class="col-md-10 col-md-offset-1">
   <div class="col-sm-12 text-right" ng-if="game > 0">
   	<h3>Points: {{your_points}}</h3>
   </div>
