--- a/views/friends.html
+++ b/views/friends.html
@@ -1,34 +1,39 @@
 <div class="content-heading">
-	<h1 class="heading">Friends</h1>
+  <div class="col-sm-10 col-sm-offset-1">
+   <h3 class="heading">Friends</h3>
+  </div>
 </div>
 
 	<div class="col-sm-12" ng-show="message" ng-cloak>
 		<div class="bg-success text-center"><p>{{message}}</p></div>
 	</div>
 
-	<div class="col-sm-12" ng-show="friendReceiveRequest.length > 0" ng-cloak>
-		<div class="bg-success text-center"><a ng-href="#/friends/requests/">You have pending friend requests</a></div>
-	</div>	
-
+<div class="col-sm-10 col-sm-offset-1">
 	<div class="col-sm-12">
-		<div class="card" ng-show="friends.length === 0" ng-cloak>
-		    <div class="card-main">
-		        <div class="card-inner"> No friends :( </div>
-		    </div>
-		</div>
-		<ul class="list-group">
-			<li class="list-group-item" ng-repeat="friend in friends">
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="name">{{friend.username}}</div>
-					</div>
-					<div class="col-sm-6 text-right buttons">
-						
-						<a class="btn btn-danger">Unfriend</a>
-
-					</div>
-				</div>
-			</li>
-		</ul>
-	</div>
-
+    <div class="card">
+      <div class="card-main">
+        <nav class="margin-top-no tab-nav">
+          <ul class="nav nav-justified">
+            <li class="active">
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#friends_tab" target="_self">Friends</a>
+            </li>
+            <li>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#requests_tab" target="_self">Requests <span class="label label-red" ng-show="friendReceiveRequest.length > 0">{{friendReceiveRequest.length}}</span></a>
+            </li>
+          </ul>
+        <div class="tab-nav-indicator"></div></nav>
+        <div class="card-inner">
+          <div class="tab-content">
+            <div class="tab-pane fade active in" id="friends_tab">
+              <p ng-show="friends.length === 0" ng-cloak>No friends :(</p>
+              <ng-include src="'views/friends/list.html'" ng-if="friends.length > 0"></ng-include>
+            </div>
+            <div class="tab-pane fade" id="requests_tab">
+              <p ng-show="friendReceiveRequest.length === 0" ng-cloak>No friend requests yet</p>
+              <ng-include src="'views/friends/requests.html'" ng-if="friendReceiveRequest.length > 0"></ng-include>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
