--- a/views/draft.html
+++ b/views/draft.html
@@ -1,11 +1,14 @@
 <div class="content-heading">
-  <div class="col-sm-7 col-sm-offset-1">
-   <h3 class="heading" ng-if="!challengeID">Draft</h3>
-   <h3 class="heading" ng-if="challengeID">Head to Head Draft</h3>
-   <p class="margin-no">Round {{round}}</p>
-  </div>
-  <div class="col-sm-3 text-right col-sm-pull-1 col-sm-offset-1">
-    <a class="btn waves-attach" data-toggle="menu" href="#rightNav" target="_self" ng-click="viewRoster()">View Roster</a>
+  <div class="col-sm-10 col-sm-offset-1">
+    <div class="row">
+      <div class="col-xs-6">
+       <h3 class="heading margin-no" ng-if="!challengeID">Draft</h3>
+       <h3 class="heading margin-no" ng-if="challengeID">Head to Head Draft</h3>
+      </div>
+      <div class="col-xs-6 hidden-xx text-right">
+        <h3 class="heading margin-no">Round {{round}}</h3>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -14,13 +17,4 @@
 	<div class="alert alert-info text-center" ng-show="draft_order[round] !== uid" ng-cloak>Please wait for your turn in the next round.</div>
 </div>
     
-  <ng-include src="playersList"></ng-include>
-
-<!-- <div class="col-sm-5">
-
-	<h3>Player Roster</h3>
-  
-   <ng-include src="draftURL" ng-load="roster = my_players;showpos = true;showteam = true;showplayerimage = false;" ng-if="my_players"></ng-include>
-  
-</div> -->
-
+<ng-include src="playersList"></ng-include>
