--- a/views/challenges.html
+++ b/views/challenges.html
@@ -5,17 +5,17 @@
 </div>
 
 <div class="col-sm-10 col-sm-offset-1">
-	<div class="col-sm-12">
+	<!-- <div class="col-sm-12"> -->
 
     <div class="card">
       <div class="card-main">
         <nav class="margin-top-no tab-nav">
           <ul class="nav nav-justified">
             <li class="active">
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Friend Challenges <span class="label" ng-if="friend.challenges.length > 0">{{friend.challenges.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Active <span class="label" ng-if="friend.challenges.length > 0">{{friend.challenges.length}}</span></a>
             </li>
             <li>
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Player Challenges <span class="label" ng-if="users.challenges.length > 0">{{users.challenges.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Pending <span class="label" ng-if="users.challenges.length > 0">{{users.challenges.length}}</span></a>
             </li>
             <li>
               <a class="waves-attach waves-effect" data-toggle="tab" href="#request_tab" target="_self">Requests <span class="label label-red" ng-if="users.received.length > 0 || friends.received.length > 0">{{users.received.length + friends.received.length}}</span></a>
@@ -43,5 +43,5 @@
         </div>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
