--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,6 @@
 <div class="content-heading" ng-if="uid" ng-cloak>
   <div class="col-sm-10 col-sm-offset-1">
-   <h3 class="heading">Welcome to FantasyZone</h1>
-  <p>Battle weekly for pride or prizes. Play for free!</p>
+   <h3 class="heading">Welcome back, {{displayName || username}}</h1>
   </div>
 </div>
 
@@ -11,37 +10,15 @@
 
 <div class="col-sm-10 col-sm-offset-1" ng-show="uid" ng-cloak>
 
-	<div class="col-sm-7">
+	<div class="col-sm-12">
     <div class="card">
         <div class="card-main">
             <div class="card-inner container">
-          		<h3 class="margin-no">Latest News</h3>
-          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
-          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
-          		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nihil eveniet dolores pariatur quas. Aperiam ullam dicta dolore expedita, repudiandae rerum sint, quibusdam omnis iure doloribus adipisci ab quo necessitatibus?</p>
+          		<h3 class="margin-no">Current Games</h3>
+              
             </div>
           </div>
         </div>
 	</div>
 
-	<div class="col-sm-5">
-		
-		<div class="card">
-		    <div class="card-main">
-		        <div class="card-inner">
-		        	<p class="card-heading">Top players this week</p>
-					<table class="table">
-						<tr>
-							<td>1.</td>
-							<td>Tom Brady</td>
-							<td>30.0</td>
-						</tr>
-					</table>
-
-		        </div>
-		    </div>
-		</div>
-		
-
-	</div>
 </div>
