Content update for all displays

--- a/views/draft.html
+++ b/views/draft.html
@@ -1,12 +1,12 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-sm-12">
     <div class="row">
       <div class="col-xs-6">
-       <h3 class="heading margin-no" ng-if="!challengeID">Draft</h3>
-       <h3 class="heading margin-no" ng-if="challengeID">Head to Head Draft</h3>
+       <h3 class="heading" ng-if="!challengeID">Draft</h3>
+       <h3 class="heading" ng-if="challengeID">Head to Head Draft</h3>
       </div>
       <div class="col-xs-6 hidden-xx text-right">
-        <h3 class="heading margin-no">Round {{round}}</h3>
+        <h3 class="heading">Round {{round}}</h3>
       </div>
     </div>
   </div>
