--- a/views/players.html
+++ b/views/players.html
@@ -1,5 +1,5 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-sm-12">
 	 <h3 class="heading">Players</h3>
   </div>
 </div>
