--- a/views/friend-requests.html
+++ b/views/friend-requests.html
@@ -1,5 +1,5 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-sm-12">
    <h3 class="heading">Friend Requests</h3>
   </div>
 </div>
@@ -8,7 +8,7 @@
   <div class="bg-success text-center"><p>{{message}}</p></div>
 </div>
 
-<div class="col-sm-10 col-sm-offset-1">
+<div class="col-sm-12">
   <div class="col-sm-12">
 
     <div class="card" ng-show="friendReceiveRequest.length === 0" ng-cloak>
