--- a/views/practice.html
+++ b/views/practice.html
@@ -1,12 +1,12 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-sm-12">
    <h3 class="heading">Practice</h3>
   </div>
 </div>
 
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
-<div class="col-sm-10 col-sm-offset-1">
+<div class="col-sm-12">
   <div class="col-sm-12 text-right" ng-if="game > 0">
   	<h3>Points: {{your_points}}</h3>
   </div>
