--- a/views/users.html
+++ b/views/users.html
@@ -1,11 +1,11 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-sm-12">
    <h3 class="heading">Users</h3>
   </div>
 </div>
 
 
-<div class="col-sm-10 col-sm-offset-1">
+<div class="col-sm-12">
   <div class="col-sm-12">
   	<div class="tile-wrap">
       <form ng-submit="deepSearch()">
