--- a/views/challenge-requests.html
+++ b/views/challenge-requests.html
@@ -5,8 +5,7 @@
 </div>
 
 <div class="col-sm-12">
-
-  <div class="card" ng-show="users.received.length === 0 && friends.received.length === 0" ng-cloak>
+  <div class="card" ng-show="userChallenges.received.length === 0 && friendChallenges.received.length === 0" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
             <p>No challenge requests.</p>
@@ -14,7 +13,7 @@
       </div>
     </div>
 
-    <ng-include src="'views/challenges/requests.html'" ng-if="friends.received.length > 0" ng-init="requests = friends.received;isFriend = true;"></ng-include>
-    <ng-include src="'views/challenges/requests.html'" ng-if="users.received.length > 0" ng-init="requests = users.received"></ng-include>
+    <ng-include src="'views/challenges/requests.html'" ng-if="friendChallenges.received.length > 0" ng-init="requests = friendChallenges.received;isFriend = true;"></ng-include>
+    <ng-include src="'views/challenges/requests.html'" ng-if="userChallenges.received.length > 0" ng-init="requests = userChallenges.received"></ng-include>
 
 </div>
