Images added Updated content

--- a/views/challenge-requests.html
+++ b/views/challenge-requests.html
@@ -1,14 +1,15 @@
 <div class="content-heading">
   <div class="col-sm-12">
-   <h3 class="heading">Challenge Requests</h3>
+   <h3 class="heading">Game Requests</h3>
   </div>
 </div>
 
 <div class="col-sm-12">
+
   <div class="card" ng-show="userChallenges.received.length === 0 && friendChallenges.received.length === 0" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
-            <p>No challenge requests.</p>
+            <p>No game requests.</p>
         </div>
       </div>
     </div>
