--- a/views/challenges.html
+++ b/views/challenges.html
@@ -1,10 +1,10 @@
 <div class="content-heading">
-  <div class="col-sm-10 col-sm-offset-1">
-   <h3 class="heading">Challenges</h3>
+  <div class="col-sm-12">
+   <h3 class="heading">Games</h3>
   </div>
 </div>
 
-<div class="col-sm-10 col-sm-offset-1">
+<div class="col-sm-12">
 	<!-- <div class="col-sm-12"> -->
 
     <div class="card">
@@ -12,14 +12,14 @@
         <nav class="margin-top-no tab-nav">
           <ul class="nav nav-justified">
             <li class="active">
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Active <span class="label" ng-if="friend.challenges.length > 0">{{friend.challenges.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#friend_tab" target="_self">Live <span class="label" ng-if="friend.challenges.length > 0">{{friend.challenges.length}}</span></a>
             </li>
             <li>
-              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Pending <span class="label" ng-if="users.challenges.length > 0">{{users.challenges.length}}</span></a>
+              <a class="waves-attach waves-effect" data-toggle="tab" href="#player_tab" target="_self">Upcoming <span class="label" ng-if="users.challenges.length > 0">{{users.challenges.length}}</span></a>
             </li>
-            <li>
+            <!-- <li>
               <a class="waves-attach waves-effect" data-toggle="tab" href="#request_tab" target="_self">Requests <span class="label label-red" ng-if="users.received.length > 0 || friends.received.length > 0">{{users.received.length + friends.received.length}}</span></a>
-            </li>
+            </li> -->
           </ul>
         <div class="tab-nav-indicator"></div></nav>
         <div class="card-inner">
@@ -33,11 +33,11 @@
               <ng-include src="'views/challenges/list.html'" ng-if="users.challenges.length > 0" ng-init="challenges = users.challenges"></ng-include>
             </div>
 
-            <div class="tab-pane fade" id="request_tab">
+            <!-- <div class="tab-pane fade" id="request_tab">
               <p ng-show="users.received.length === 0 && friends.received.length === 0" ng-cloak>No challenge requests.</p>
               <ng-include src="'views/challenges/requests.html'" ng-if="friends.received.length > 0" ng-init="requests = friends.received;isFriend = true;"></ng-include>
               <ng-include src="'views/challenges/requests.html'" ng-if="users.received.length > 0" ng-init="requests = users.received"></ng-include>
-            </div>
+            </div> -->
 
           </div>
         </div>
