--- a/views/draft.html
+++ b/views/draft.html
@@ -6,8 +6,19 @@
 </div>
 
 <div class="col-sm-12" ng-if="draft_order">
-  <h3 class="text-center" ng-show="draft_order[round] === uid" ng-cloak>Select a player below</h3>
-	<div class="alert alert-info text-center" ng-show="draft_order[round] !== uid" ng-cloak>Please wait for your turn in the next round.</div>
+  
+  <h3 class="text-center margin-top-sm" ng-show="draft_order[round] === uid" ng-cloak>Select a player below</h3>
+
+  <div class="card card-red" ng-show="draft_order[round] !== uid" ng-cloak>
+    <div class="card-main">
+      <div class="card-inner text-center">
+        <p>
+          Please wait for your turn in the next round.
+        </p>
+      </div>
+    </div>
+  </div>
+
 </div>
     
 <ng-include src="playersList"></ng-include>
