--- a/views/home.html
+++ b/views/home.html
@@ -8,14 +8,18 @@
 
 <div class="home" ng-show="uid" ng-cloak>
 
+  <div class="slideshow">
+
+  </div>
+
 	<div class="col-sm-12">
 
     <div class="card">
       <div class="card-main">
           <div class="card-inner container">
         		<h3 class="margin-no">Current Games</h3>
-            <ng-include src="'views/challenges/list.html'" ng-if="friends.challenges.length > 0" ng-init="challenges = friends.challenges"></ng-include>
-            <ng-include src="'views/challenges/list.html'" ng-if="users.challenges.length > 0" ng-init="challenges = users.challenges"></ng-include>
+            <ng-include src="'views/challenges/list.html'" ng-if="friendChallenges.challenges.length > 0" ng-init="challenges = friendChallenges.challenges"></ng-include>
+            <ng-include src="'views/challenges/list.html'" ng-if="userChallenges.challenges.length > 0" ng-init="challenges = userChallenges.challenges"></ng-include>
           </div>
         </div>
     </div>
