--- a/views/notifications.html
+++ b/views/notifications.html
@@ -1,10 +1,24 @@
 <ul class="notifications nav nav-list pull-right padding-right-sm">
-  <li><a ng-href="#/friendRequests">
+  <li><a class="logo-btn" ng-href="#/friendRequests">
       <span class="icon icon-2x" tooltip data-toggle="tooltip" data-placement="bottom" title="Friend Requests" ng-class="{'icon-disabled': friendReceiveRequest.length === 0}">group</span>
       <span class="label label-red" ng-cloak ng-if="friendReceiveRequest.length > 0">{{friendReceiveRequest.length}}</span>
     </a></li>
-    <li><a ng-href="#/challengeRequests">
+    <li><a class="logo-btn" ng-href="#/challengeRequests">
       <span class="icon icon-2x" ng-class="{'icon-disabled': userChallenges.receivedList.length === 0 && friendChallenges.receivedList.length === 0}" tooltip data-toggle="tooltip" data-placement="bottom" title="Game Requests">notifications</span>
       <span class="label label-red" ng-show="userChallenges.receivedList > 0 || friendChallenges.receivedList.length > 0" ng-cloak>{{userChallenges.receivedList + friendChallenges.receivedList }}</span>
     </a></li>
+    <li class="dropdown"><a class="more logo-btn pull-right" data-toggle="dropdown">
+      <span class="icon icon-2x">more_vert</span>
+    </a>
+      
+      <ul class="dropdown-menu">
+        <li>
+          <a class="padding-right-lg waves-attach" ng-href="#/profile"><span class="icon icon-lg margin-right">account_box</span>Profile</a>
+        </li>
+        <li>
+          <a class="padding-right-lg waves-attach" ng-click="main.logout()"><span class="icon icon-lg margin-right">exit_to_app</span>Logout</a>
+        </li>
+      </ul>
+
+    </li>
 </ul>
